--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,22 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:0HJHI86mQgPjHN0KienkwWfORnhzXp6h1spM1KI++24=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
+DB_DATABASE= "C:/Users/Nicolas/Documents/Master Grenoble/Cours/Web Serveur/BlogLaravel/database/database.sqlite"
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=larablog
+# DB_USERNAME=root
+# DB_PASSWORD=
+ 
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -30,10 +33,10 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=743782
+PUSHER_APP_KEY=0a4ccb5d0b126e36b845
+PUSHER_APP_SECRET=d2e0dd4ea100cfe6dc66
+PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
