--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlite
-DB_DATABASE= "C:/Users/Nicolas/Documents/Master Grenoble/Cours/Web Serveur/BlogLaravel/database/database.sqlite"
+DB_DATABASE= "C:\Users\Nicolas\Documents\Master Grenoble\Cours\Web Serveur\BlogLaravel\database\database.sqlite"
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
@@ -38,5 +38,5 @@ PUSHER_APP_KEY=0a4ccb5d0b126e36b845
 PUSHER_APP_SECRET=d2e0dd4ea100cfe6dc66
 PUSHER_APP_CLUSTER=eu
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_PUSHER_APP_KEY=0a4ccb5d0b126e36b845
+MIX_PUSHER_APP_CLUSTER=eu
