--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "botman/botman": "^2.4",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "mpociot/botman": "^2.4",
         "pusher/pusher-php-server": "^3.4"
     },
     "require-dev": {
