--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": "^7.1.3",
         "botman/botman": "^2.4",
+        "botman/driver-web": "^1.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "mpociot/botman": "^2.4",
-        "pusher/pusher-php-server": "^3.4"
+        "pusher/pusher-php-server": "^3.4",
+        "symfony/cache": "^4.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
